dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.5])
AC_INIT([vpr-extract], [1.0], [0x@vpr.io])
AC_CONFIG_SRCDIR([Sources/Main.cpp])
AC_CONFIG_HEADERS([config.h])

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC

dnl Enable automake
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T

dnl Checks for library functions.

AC_CONFIG_FILES([Makefile]) 
AC_OUTPUT